reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_names-2.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: foos

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    foos: FoosInterface;
  }

  export interface FoosInterface {
    get: (
      input: number /* u64 */,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<foos.Foo, {}>;
  }
}
export namespace foos {
  export interface Foo {}
}

export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

namespace __implementation {

  function foos__get(client: Client) {
    return (input: number /* u64 */, headers: {}, options?: RequestOptions) =>
      __request<number /* u64 */, {}, foos.Foo, {}>(
        client,
        "/foos.get",
        input,
        headers,
        options,
      );
  }
}
