reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_names-3.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: rust
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: foos

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        pub foos: FoosInterface<C>,
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self {
                foos: FoosInterface::new(client.clone()),
                client,
            }
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }

    #[derive(Debug)]
    pub struct FoosInterface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> FoosInterface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn get(
            &self,
            input: usize,
            headers: reflectapi::Empty,
        ) -> Result<super::types::foos::Foo, reflectapi::rt::Error<reflectapi::Empty, C::Error>>
        {
            reflectapi::rt::__request_impl(&self.client, "/foos.get", input, headers).await
        }
    }
}
pub mod types {
    pub mod foos {

        #[derive(Debug, serde::Deserialize)]
        pub struct Foo {}
    }
}
