reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_names-5.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: python
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name: foos
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class FoosFoo(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )


# Namespace classes for dotted access to types
class foos:
    """Namespace for foos types."""

    Foo = FoosFoo


class AsyncFoosClient:
    """Async client for foos operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def get(
        self,
        data: Optional[int] = None,
    ) -> ApiResponse[foos.Foo]:
        """

        Args:
            data: Request data for the get operation.

        Returns:
            ApiResponse[foos.Foo]: Response containing foos.Foo data
        """
        path = "/foos.get"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_data=data,
            response_model=foos.Foo,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.foos = AsyncFoosClient(self)


class FoosClient:
    """Synchronous client for foos operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def get(
        self,
        data: Optional[int] = None,
    ) -> ApiResponse[foos.Foo]:
        """

        Args:
            data: Request data for the get operation.

        Returns:
            ApiResponse[foos.Foo]: Response containing foos.Foo data
        """
        path = "/foos.get"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_data=data,
            response_model=foos.Foo,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.foos = FoosClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    FoosFoo,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
