reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_namespace_names-2.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: foo

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    x: XInterface;
    y: YInterface;
  }

  export interface XInterface {
    foo: XFooInterface;
  }

  export interface XFooInterface {
    get: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }

  export interface YInterface {
    foo: YFooInterface;
  }

  export interface YFooInterface {
    get: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<null, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

namespace __implementation {

  function x__foo__get(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<{}, {}, {}, {}>(client, "/x.foo.get", input, headers, options);
  }
  function y__foo__get(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<{}, {}, null, {}>(
        client,
        "/y.foo.get",
        input,
        headers,
        options,
      );
  }
}
