reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__conflicting_namespace_names-5.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: python
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name: foo
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class AsyncXClient:
    """Async client for x operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def foo_get(
        self,
    ) -> ApiResponse[Any]:
        """

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/x.foo.get"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class AsyncYClient:
    """Async client for y operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def foo_get(
        self,
    ) -> ApiResponse[None]:
        """

        Returns:
            ApiResponse[None]: Response containing None data
        """
        path = "/y.foo.get"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.x = AsyncXClient(self)

        self.y = AsyncYClient(self)


class XClient:
    """Synchronous client for x operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def foo_get(
        self,
    ) -> ApiResponse[Any]:
        """

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/x.foo.get"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class YClient:
    """Synchronous client for y operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def foo_get(
        self,
    ) -> ApiResponse[None]:
        """

        Returns:
            ApiResponse[None]: Response containing None data
        """
        path = "/y.foo.get"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.x = XClient(self)

        self.y = YClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
