reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__generic_and_type_conflict-2.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    get: (
      input: reflectapi_demo.tests.namespace.K<T<null>>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.namespace.K<T<null>>, {}>;
  }
}
export type T<I> = I;

export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace namespace {
      export interface K<T> {
        t: T;
      }
    }
  }
}

namespace __implementation {

  function get(client: Client) {
    return (
      input: reflectapi_demo.tests.namespace.K<T<null>>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.namespace.K<T<null>>,
        {},
        reflectapi_demo.tests.namespace.K<T<null>>,
        {}
      >(client, "/get", input, headers, options);
  }
}
