reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__generic_and_type_conflict-3.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: rust
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn get(
            &self,
            input: super::types::reflectapi_demo::tests::namespace::K<super::types::T<()>>,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::namespace::K<super::types::T<()>>,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/get", input, headers).await
        }
    }
}
pub mod types {

    pub type T<I> = I;
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod namespace {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct K<T> {
                    pub t: T,
                }
            }
        }
    }
}
