reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__generic_and_type_conflict-5.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: python
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Type variables for generic types


I = TypeVar("I")

_T_T = TypeVar("_T_T")


class ReflectapiDemoTestsNamespaceK(BaseModel, Generic[_T_T]):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    t: _T_T


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class namespace:
            """Namespace for namespace types."""

            K = ReflectapiDemoTestsNamespaceK


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

    async def get(
        self,
        data: Optional[
            reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]
    ]:
        """

        Args:
            data: Request data for the get operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]]: Response containing reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]] data
        """
        path = "/get"

        params: dict[str, Any] = {}
        return await self._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.namespace.K[
                Annotated[Any, "External type: I"]
            ],
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

    def get(
        self,
        data: Optional[
            reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]
        ] = None,
    ) -> ApiResponse[
        reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]
    ]:
        """

        Args:
            data: Request data for the get operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]]]: Response containing reflectapi_demo.tests.namespace.K[Annotated[Any, "External type: I"]] data
        """
        path = "/get"

        params: dict[str, Any] = {}
        return self._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.namespace.K[
                Annotated[Any, "External type: I"]
            ],
        )


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsNamespaceK,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
