reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__generic_and_type_conflict.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "get",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::namespace::K",
        "arguments": [
          {
            "name": "T",
            "arguments": [
              {
                "name": "std::tuple::Tuple0"
              }
            ]
          }
        ]
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::namespace::K",
        "arguments": [
          {
            "name": "T",
            "arguments": [
              {
                "name": "std::tuple::Tuple0"
              }
            ]
          }
        ]
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "T",
        "parameters": [
          {
            "name": "I"
          }
        ],
        "fields": {
          "unnamed": [
            {
              "name": "0",
              "type": {
                "name": "I"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::namespace::K",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "t",
              "type": {
                "name": "T"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple0",
        "description": "Unit type"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "T",
        "parameters": [
          {
            "name": "I"
          }
        ],
        "fields": {
          "unnamed": [
            {
              "name": "0",
              "type": {
                "name": "I"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::namespace::K",
        "parameters": [
          {
            "name": "T"
          }
        ],
        "fields": {
          "named": [
            {
              "name": "t",
              "type": {
                "name": "T"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::tuple::Tuple0",
        "description": "Unit type"
      }
    ]
  }
}
