reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__namespace_with_dash-2.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: typescript
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name: pet-orders

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    jobs_two: JobsTwoInterface;
  }

  export interface JobsTwoInterface {
    pet_orders: JobsTwoPetOrdersInterface;
  }

  export interface JobsTwoPetOrdersInterface {
    /**
     * desc
     */
    list_x: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

namespace __implementation {

  function jobs_two__pet_orders__list_x(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<{}, {}, {}, {}>(
        client,
        "/jobs-two.pet-orders.list-x",
        input,
        headers,
        options,
      );
  }
}
