reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__namespace__namespace_with_dash-5.snap
---
source: reflectapi-demo/src/tests/namespace.rs
expression: python
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name: pet-orders
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class AsyncJobsTwoClient:
    """Async client for jobs_two operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def pet_orders_list_x(
        self,
    ) -> ApiResponse[Any]:
        """desc

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/jobs-two.pet-orders.list-x"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.jobs_two = AsyncJobsTwoClient(self)


class JobsTwoClient:
    """Synchronous client for jobs_two operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def pet_orders_list_x(
        self,
    ) -> ApiResponse[Any]:
        """desc

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/jobs-two.pet-orders.list-x"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.jobs_two = JobsTwoClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
